@@ -1,3 +1,8 @@
+2004-07-27  Julien Puydt <jpuydt@free.fr>
+
+	* lib/gm_conf-glib.c: Made it possible to remove a full namespace.
+	* src/common.h: Removed unneeded defines.
+	
 2004-07-26  Damien Sandras  <dsandras@gnome.org>
 
 	* configure.in: Incremented SCHEMA_AGE.
